syntax = "proto3";

option go_package = "backend/pb";
import "model/general.proto";
import "google/protobuf/empty.proto";

package here;

service Admin {
  rpc GetAllSections (google.protobuf.Empty) returns (GetAllSectionsReply) {}
  rpc AddSection (Section) returns (google.protobuf.Empty) {}
  rpc EditSection (Section) returns (google.protobuf.Empty) {}
  rpc DeleteSection (Section) returns (google.protobuf.Empty) {}
}

message GetAllSectionsReply {
  repeated Section sections = 1;
}